err/pystardict.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyStarDict-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/pystardict'...
Compiling './share/pystardict/demo.py'...
***   File "./share/pystardict/demo.py", line 31
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './share/pystardict/profile_demo.py'...
Listing './share/pystardict/stardict-quick_eng-rus-2.4.2'...
Compiling './share/pystardict/stardict-quick_eng-rus-2.4.2/demo.py'...
***   File "./share/pystardict/stardict-quick_eng-rus-2.4.2/demo.py", line 31
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './share/pystardict/stardict-quick_rus-eng-2.4.2'...
Listing './share/python-wheels'...
